# zmora-judge

./: .gitignore  Docker-Jenkinsfile  Dockerfile  Jenkinsfile  judge.proto  stack.yaml  zmora-judge.cabal
app/: Main.hs
scripts/: docker-entrypoint.sh
src/: AMQP.hs  Compiler.hs  Configuration.hs  Jail.hs  Json.hs  Models.hs  QueueModel.hs  RabbitMQ.hs  Runnable.hs  Worker.hs  ZeroMQ.hs
src/QueueModel/: Judge.hs
src/QueueModel/Judge/: Task.hs  TaskResult.hs
src/QueueModel/Judge/Task/: File.hs  Test.hs
src/QueueModel/Judge/TaskResult/: Status.hs  TestResult.hs
