name:                zmora-judge
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zmora-agh/zmora-judge#readme
license:             BSD3
license-file:        LICENSE
author:              zmora-agh
maintainer:          example@example.com
copyright:           zmora-agh
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Worker
  other-modules:       Json
                     , Models
                     , ZeroMQ
  build-depends:       base >= 4.7 && < 5
                     , zeromq4-haskell
                     , bytestring
                     , aeson
  default-language:    Haskell2010

executable zmora-judge
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zmora-judge
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmora-agh/zmora-judge
