name:                zmora-judge
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zmora-agh/zmora-judge#readme
license:             BSD3
license-file:        LICENSE
author:              zmora-agh
maintainer:          example@example.com
copyright:           zmora-agh
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Worker
                     , Configuration
  other-modules:       Models
                     , Compiler
                     , Jail
                     , RabbitMQ
  build-depends:       base >= 4.7 && < 5
                     , amqp
                     , bytestring
                     , directory
                     , filepath
                     , lifted-base
                     , monad-control
                     , monad-logger
                     , process
                     , protobuf
                     , stm
                     , temporary
                     , text
                     , transformers
                     , zmora-queue
  default-language:    Haskell2010

executable zmora-judge
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monad-logger-syslog
                     , zmora-judge
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmora-agh/zmora-judge
